2007-01-09 Sandro Santilli <strk@refractions.net>

	* source/operation/buffer/: Makefile.am, OffsetCurveVertexList.h:
	  New helper class for OffsetCurveBuilder
	* operation::buffer::OffsetCurveBuilder:
	  Move vertexlist management to external class.
	* tests/xmltester/: Makefile.am, TestBufferExternal.xml:
	  added test for above changes (imported from JTS and
	  modified to work with GEOS).
	* tests/xmltester/XMLTester.cpp: change buffer
	  validator again: check area of topological 
	  difference between expected and obtained result
	  to be smaller then 1/1000 of expected geometry
	  area.

2007-01-09 Sandro Santilli <strk@refractions.net>

	* source/geom/CoordinateArraySequence.cpp,
	  source/headers/geos/geom/CoordinateSequence.h,
	  source/headers/geos/geom/CoordinateArraySequence.h:
	  add(Coordinate, bool) made a virtual method and overrridden
	  for CoordinateArraySequence, for better performance
	  (single virtual call vs. multiple); added front() and
	  back() methods.
	* tests/xmltester/XMLTester.cpp: add areatest
	  to buffer test handler.

2007-01-04 Sandro Santilli <strk@refractions.net>

	* configure.in: prepared for version to 3.0.0rc4,
	  fixed swig python errors as suggested by hint
	  (AM_PATH_PYTHON).

2007-01-04 Sandro Santilli <strk@refractions.net>

	* configure.in, swig/geos.i.in, swig/geos.i:
	  geos.i generated at configure time from geos.i.in
	  (so we don't have to manually update versions there).

2007-01-04 dev-zero at gentoo dot org 

	* swig/geos.i: use unsigned int when CAPI signatures
	  expect unsigned int (not size_t).

2007-01-03 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: fme.xml, Makefile.am: added buffer testcase.
	* tests/xmltester/XMLTester.cpp: use a tolerance of 10E-6
	  for buffer validation (~10cm at worst when using latlong
	  projections); create sql tables with oid to work around a
	  bug in qgis 0.7.4.

2007-01-03 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>
